added some layout to the input

--- a/lib/app/theme.sass
+++ b/lib/app/theme.sass
@@ -1,3 +1,17 @@
 body
   font-family: sans-serif
   font-size: 16px
+
+
+.sort-key
+  display: flex
+  flex-direction: column
+  margin-bottom: .5rem
+
+.sort-label
+  align-items: baseline
+  display: flex
+
+
+.sort-input
+  margin-left: .5rem
