Added a map component

--- a/lib/app/theme.sass
+++ b/lib/app/theme.sass
@@ -15,3 +15,11 @@ body
 
 .sort-input
   margin-left: .5rem
+
+.map-container
+  height: 25rem
+  margin-top: 1rem
+  max-width: 30rem
+
+.map-element
+  height: 100%
